PySmell v0.7.3 - 16 Jan 2009

Better support for windows line endings.
Added some docstrings
Better error handling
Better module attribute lookups


PySmell v0.7.2 - 16 Nov 2008

Better arguments handling.
New -i option allows you to update existing PYSMELLTAGS file.
The current file is analyzed when a completion is requested.
TextMate improvements - TM_PYTHON is picked up.
Handle local classes
Minor speedups.
Tabs are now handled.
Added ez_setup


PySmell v0.7.1 - 4 Nov 2008

More robust TextMate support, better error reporting on Vim.

PySmell v0.7 - 2 Nov 2008

Added module member completion: "import os" followed by "os." will give members of os.
Added rudimentary type-inferencing: 
	a = A() # A is a class.
	"a" will be detected as an instance of A.
A lot of under-the-hood refactoring, making adding features easier.
Added setuptools support: pysmell is now a script. Thanks, Michael Thalmeier
Added Emacs support. Thanks, Tom Wright
Added TextMate support. Thanks, dbr - http://neverfear.org/
PySmell has now a bug tracker on Google Code. Also available at PyPI.


PySmell v0.6 - 13 Oct 2008

Added module completion, including absolute and relative imports. Completing import
statements works, but the messages may look a bit wonky - please report oddities.

Added support for 'static' libraries - Basically, PYSMELLTAGS.* will now be
used, but you still have to have a root PYSMELLTAGS file. Look at README for
more information.

Improved handling of single files and package detection
Python 2.4-2.5 can now be analyzed with no errors.
Renamed pysmelltags.py to pysmell.py
Added shebang to pysmell.py


PySmell v0.5 - 15 Sep 2008

Bug fix: infinite loop when no PYSMELLTAGS is found.


PySmell v0.4 - 11 Sep 2008

Improved class detection: Now works even for classes which are not present in PYSMELLDICT
Improved import handling: "absolute" imports work, as well as imported name detection.
This version sort-of correctly handles Django (not the dynamic part of course!)

