@@ -1,5 +1,0 @@
-Orestis Markou <http://orestis.gr>
-Krzysiek Goj <http://krzysiek-goj.blogspot.com/> - Matchers and more
-Michael Thalmeier <michi@michisoft.net> - Setuptools
-Tom Wright <tat.wright@tat.wright.name> - Emacs
-Jaime Wyant <programmer.py@gmail.com> - tags improvements
